guessgame.css
* {
  box-sizing: border-box;
}

body {
  font-family: sans-serif;
  width: 100vw;
  height: 95vh;
  background-color: #fafafa;
  margin: 0;
}

.back {
  text-decoration: none;
  color: rgb(36, 36, 36);
  font-size: 48px;
  position: absolute;
  top: 0;
  left: 10px;
}

#app {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

h1 {
  width: 450px;
  text-align: center;
  font-size: 36px;
}

input {
  width: 200px;
  height: 44px;
  font-size: 24px;
  margin: 0;
  text-align: center;
  margin-bottom: 10px;
}

.button {
  width: 200px;
  padding: 10px;
  margin: 0;
  background-color: #cad56e;
  border: none;
  text-transform: uppercase;
  text-align: center;
  font-size: 24px;
  line-height: 24px;
  font-weight: 600;
  box-shadow: 0px 3px #868686;
  border-radius: 6px;
  cursor: pointer;
  user-select: none;
  color: #3b3b34;
}

.button:hover {
  background-color: #cfda72;
}

.button:hover:active {
  box-shadow: none;
  margin-bottom: -3px;
  margin-top: 3px;
  background-color: #adb659;
}

.start-over {
  width: 200px;
  text-align: center;
  margin-top: 15px;
  font-size: 20px;
  text-decoration: underline;
  cursor: pointer;
}

#feedback {
  width: 200px;
  text-align: center;
  margin-top: 10px;
  font-size: 20px;
}

#guesses {
  width: 200px;
  text-align: center;
  margin-top: 10px;
  font-size: 20px;
}

.too-small {
  color: #f03f3f;
}

.too-big {
  color: #3e67e0;
}

